# ChillyGB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  apu.c  apu.h  cartridge.c  cartridge.h  cpu.c  cpu.h  debug.c  debug.h  input.c  input.h  main.c  make-wasm.sh  opcodes.c  opcodes.h  ppu.c  ppu.h  settings.c  settings.h  timer.c  timer.h  windows-toolchain.cmake
.github/workflows/: build-linux.yml  build-switch.yml  build-wasm.yml  build-windows.yml
raylib-nuklear/include/: nuklear.h
res/shaders/: color-correction.fs  pixel_grid.fs
src/: main.c
src/includes/: apu.h  camera.h  cartridge.h  cheats.h  cpu.h  debug.h  input.h  memory.h  opcodes.h  open_dialog.h  ppu.h  savestates.h  serial.h  settings.h  timer.h  ui.h
src/modules/: apu.c  camera.c  cartridge.c  cheats.c  cpu.c  debug.c  input.c  memory.c  opcodes.c  open_dialog.c  ppu.c  raylib-nuklear.c  savestates.c  serial.c  settings.c  timer.c  ui.c
wasm-frontend/: manifest.json  serviceWorker.js  shell.html
